# AirPickerV2

./: .env  README.md  pyproject.toml
app/: config.py  main.py
app/config/: config.py  nba_api_column_mapping.json
app/dao/: boxscore_dao.py  player_dao.py  team_dao.py  teamgamelog_dao.py
app/database/: db_connector.py  declarative_base.py
app/database/create_tables/: create_player_table.py
app/database/fill_tables/: fill_player_table.py
app/database/tables_lifecycle/: clear_tables.py  create_tables.py  fill_tables.py
app/database/tables_lifecycle/global_lifecycles/: clear_tables.py  create_tables.py  drop_tables.py  fill_tables.py
app/database/tables_lifecycle/player_table_lifecycle/: player_table_lifecycle.py  team_table_lifecycle.py
app/database/tables_lifecycle/tables_lifecycles/: boxscore_table_lifecycle.py  player_table_lifecycle.py  team_table_lifecycle.py
app/database/tables_mgmt/daily_update/: database_daily_update.py
app/database/tables_mgmt/global_mgmt/: clear_tables.py  (+3 more)
app/dto/: boxscore_dto.py  player_dto.py  team_dto.py  teamgamelog_dto.py
app/enum/: nba_api_endpoints.py
app/enums/: nba_api_endpoints.py
app/exceptions/: exceptions.py
app/models/: __init__.py  boxscore.py  player.py  team.py  teamgamelog.py
app/schemas/: boxscore_schema.py  player_schema.py  team_schema.py  teamgamelog_schema.py
app/services/: api_service.py  boxscore_service.py  commonteamroster_service.py  database_service.py  nba_api_service.py  player_service.py  team_service.py  teamgamelog_service.py
app/utils/: nba_api_column_mapper.py  utils.py
(+6 files in other folders)
