[tool.poetry]
name = "air-picker-v2"
version = "0.1.0"
description = ""
authors = ["Erwan <egretillat@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
numpy = "1.26.4"
nba-api = "^1.6.1"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.3"
black = "^24.10.0"
mypy = "^1.14.1"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
